Fix resizing the CLI on mobile (#1414)
* Fix resizing the CLI on mobile.

--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -1,4 +1,12 @@
 $top-header-height: 4rem;
 $webcli-input-height: 2.5rem;
-$webcli-drag-height: 10px;
-$webcli-height: calc(#{$webcli-input-height} + #{$webcli-drag-height});
+$webcli-desktop-drag-height: 10px;
+// The mobile drag element needs to be large so that it is not covered by the
+// input hit area.
+$webcli-mobile-drag-height: 25px;
+$webcli-desktop-height: calc(
+  #{$webcli-input-height} + #{$webcli-desktop-drag-height}
+);
+$webcli-mobile-height: calc(
+  #{$webcli-input-height} + #{$webcli-mobile-drag-height}
+);
